--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <table cellspacing="30">
         <tr>
-            <td><img src="C:\Users\linga\OneDrive\Pictures\sai.png" heigth="180" width="200" alt="sairam profile"></td>
+            <td><img src="sai.png" heigth="180" width="200" alt="sairam profile"></td>
             <td><h1>SAIRAM REDDY</h1> 
                 <p><em>founder and ceo of  <strong><a href="https://www.bing.com/search?q=s+group+investment&qs=n&form=QBRE&sp=-1&lq=0&pq=s+group+investment&sc=10-18&sk=&cvid=DBE4AB251B9E49F6A48197872DB3300C&ghsh=0&ghacc=0&ghpl=">S groups</a></strong></em></p>  
                 <p>i am an web developer.i ❤️‍🔥 to spend time with friends.</p></td>
